// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots @components/organisms/Modal Modal Form 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c13 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c11 {
  background-color: #00B0CA;
  padding: 0.9rem 3.7rem;
  border: none;
  border-radius: 40px;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  outline: none;
  cursor: pointer;
  color: #fff;
  width: auto;
}

.c11:hover {
  background-color: #0BC1DC;
  color: #fff;
}

.c11:active {
  background-color: #029FB7;
  box-shadow: -3px 3px 14px 0px rgba(129,67,67,0.2);
}

.c11:disabled {
  background-color: #F1F2F7;
  color: #B8BCD5;
  cursor: default;
}

.c11:disabled,
.c11:disabled:hover {
  cursor: default;
}

.c12 {
  display: inline-block;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c10 {
  font-size: 1rem;
  font-weight: 600;
  color: rgb(33,18,94);
  background: transparent;
  outline: none;
  border: none;
  box-shadow: none;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0;
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
}

.c10:hover {
  color: #513CA3;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
  margin: 0;
  cursor: pointer;
  width: 36px;
  height: 36px;
  background-color: #fff;
  border-radius: 50%;
  border-width: 0;
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

.c7 svg {
  display: block;
}

.c7 svg path {
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

.c7:hover {
  background-color: rgb(33,18,94);
}

.c7:hover svg path {
  fill: #fff;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1.1rem 1.875rem;
  border-bottom: 1px solid #f1f5f5;
}

.c6 {
  font-size: 1rem;
  font-weight: 600;
  color: #323232;
  text-transform: camelcase;
  padding-right: 0.6rem;
  margin: 0;
}

.c9 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1.1rem 1.875rem;
  border-top: 1px solid #f1f5f5;
}

.c9 button:last-child {
  margin-left: 2rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  width: 555px;
  height: auto;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  overflow-y: auto;
  width: 100%;
  height: 100%;
  min-height: 100%;
  top: 0;
  z-index: 2;
  -webkit-transition: opacity 0.2s ease;
  transition: opacity 0.2s ease;
  -webkit-transition-delay: 0;
  transition-delay: 0;
  background-color: rgba(199,207,207,0.8);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  opacity: 1;
}

.c3 {
  height: 100vh;
  padding-top: 3rem;
  width: 100%;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 28rem;
  max-width: 100%;
  max-height: 98%;
  z-index: 1000;
  padding-bottom: 2rem;
  overflow-y: auto;
  background-color: #fff;
  margin-left: auto;
  margin-right: auto;
  border-radius: 16px;
}

.c8 {
  padding: 0rem 1.875rem 0rem 1.875rem;
}

@media (max-width:540px) {
  .c11 {
    padding: 0.9rem 1rem;
    width: 88%;
  }
}

@media (max-width:540px) {
  .c9 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (max-width:540px) {
  .c9 button:last-child {
    margin-left: 0;
  }
}

@media (max-width:540px) {
  .c3 {
    padding-top: 0rem;
  }
}

@media (max-width:540px) {
  .c4 {
    width: 88%;
    margin-top: 0.3125rem;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    open={true}
  >
    <div
      className="c2"
      id="lightbox-modal"
      onClick={[Function]}
      open={true}
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <h4
              className="c6"
              size="md"
            >
              Modal title
            </h4>
            <div
              className="c7"
              data-cy="icon_button"
              onClick={[Function]}
            >
              <svg
                height={19}
                viewBox="0 0 32 32"
                width={19}
              >
                <path
                  d="M16 12.8l-12.8-12.8-3.2 3.2 12.8 12.8-12.8 12.8 3.2 3.2 12.8-12.8 12.8 12.8 3.2-3.2-12.8-12.8 12.8-12.8-3.2-3.2-12.8 12.8z"
                  fill="#00B0CA"
                />
              </svg>
            </div>
          </div>
          <div
            className="c8"
          >
            <div>
              Content
            </div>
          </div>
          <div
            className="c9"
          >
            <button
              className="c10"
              color="secondary"
              onClick={[Function]}
              size="md"
              type="button"
            >
              Cancel
            </button>
            <button
              className="c11"
              color="primary"
              disabled={false}
              form="form-id"
              size="md"
              type="submit"
            >
              <span
                className="c12"
                size="md"
              >
                Save
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c13"
  />
</div>
`;

exports[`Storyshots @components/organisms/Modal Modal Form disabled 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c12 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c10 {
  background-color: #00B0CA;
  padding: 0.9rem 3.7rem;
  border: none;
  border-radius: 40px;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  outline: none;
  cursor: pointer;
  color: #fff;
  width: auto;
}

.c10:hover {
  background-color: #0BC1DC;
  color: #fff;
}

.c10:active {
  background-color: #029FB7;
  box-shadow: -3px 3px 14px 0px rgba(129,67,67,0.2);
}

.c10:disabled {
  background-color: #F1F2F7;
  color: #B8BCD5;
  cursor: default;
}

.c10:disabled,
.c10:disabled:hover {
  cursor: default;
}

.c11 {
  display: inline-block;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
  margin: 0;
  cursor: pointer;
  width: 36px;
  height: 36px;
  background-color: #fff;
  border-radius: 50%;
  border-width: 0;
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

.c7 svg {
  display: block;
}

.c7 svg path {
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

.c7:hover {
  background-color: rgb(33,18,94);
}

.c7:hover svg path {
  fill: #fff;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1.1rem 1.875rem;
  border-bottom: 1px solid #f1f5f5;
}

.c6 {
  font-size: 1rem;
  font-weight: 600;
  color: #323232;
  text-transform: camelcase;
  padding-right: 0.6rem;
  margin: 0;
}

.c9 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1.1rem 1.875rem;
  border-top: 1px solid #f1f5f5;
}

.c9 button:last-child {
  margin-left: 2rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  width: 555px;
  height: auto;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  overflow-y: auto;
  width: 100%;
  height: 100%;
  min-height: 100%;
  top: 0;
  z-index: 2;
  -webkit-transition: opacity 0.2s ease;
  transition: opacity 0.2s ease;
  -webkit-transition-delay: 0;
  transition-delay: 0;
  background-color: rgba(199,207,207,0.8);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  opacity: 1;
}

.c3 {
  height: 100vh;
  padding-top: 3rem;
  width: 100%;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 28rem;
  max-width: 100%;
  max-height: 98%;
  z-index: 1000;
  padding-bottom: 2rem;
  overflow-y: auto;
  background-color: #fff;
  margin-left: auto;
  margin-right: auto;
  border-radius: 16px;
}

.c8 {
  padding: 0rem 1.875rem 0rem 1.875rem;
}

@media (max-width:540px) {
  .c10 {
    padding: 0.9rem 1rem;
    width: 88%;
  }
}

@media (max-width:540px) {
  .c9 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (max-width:540px) {
  .c9 button:last-child {
    margin-left: 0;
  }
}

@media (max-width:540px) {
  .c3 {
    padding-top: 0rem;
  }
}

@media (max-width:540px) {
  .c4 {
    width: 88%;
    margin-top: 0.3125rem;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    open={true}
  >
    <div
      className="c2"
      id="lightbox-modal"
      onClick={[Function]}
      open={true}
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <h4
              className="c6"
              size="md"
            >
              Modal title
            </h4>
            <div
              className="c7"
              data-cy="icon_button"
              onClick={[Function]}
            >
              <svg
                height={19}
                viewBox="0 0 32 32"
                width={19}
              >
                <path
                  d="M16 12.8l-12.8-12.8-3.2 3.2 12.8 12.8-12.8 12.8 3.2 3.2 12.8-12.8 12.8 12.8 3.2-3.2-12.8-12.8 12.8-12.8-3.2-3.2-12.8 12.8z"
                  fill="#00B0CA"
                />
              </svg>
            </div>
          </div>
          <div
            className="c8"
          >
            <div>
              Content
            </div>
          </div>
          <div
            className="c9"
          >
            <button
              className="c10"
              color="primary"
              disabled={true}
              form="modal-submit"
              size="md"
              type="submit"
            >
              <span
                className="c11"
                size="md"
              >
                Loading
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c12"
  />
</div>
`;

exports[`Storyshots @components/organisms/Modal Modal Info 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c12 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c10 {
  background-color: #00B0CA;
  padding: 0.9rem 3.7rem;
  border: none;
  border-radius: 40px;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  outline: none;
  cursor: pointer;
  color: #fff;
  width: auto;
}

.c10:hover {
  background-color: #0BC1DC;
  color: #fff;
}

.c10:active {
  background-color: #029FB7;
  box-shadow: -3px 3px 14px 0px rgba(129,67,67,0.2);
}

.c10:disabled {
  background-color: #F1F2F7;
  color: #B8BCD5;
  cursor: default;
}

.c10:disabled,
.c10:disabled:hover {
  cursor: default;
}

.c11 {
  display: inline-block;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
  margin: 0;
  cursor: pointer;
  width: 36px;
  height: 36px;
  background-color: #fff;
  border-radius: 50%;
  border-width: 0;
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

.c7 svg {
  display: block;
}

.c7 svg path {
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

.c7:hover {
  background-color: rgb(33,18,94);
}

.c7:hover svg path {
  fill: #fff;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1.1rem 1.875rem;
  border-bottom: 1px solid #f1f5f5;
}

.c6 {
  font-size: 1rem;
  font-weight: 600;
  color: #323232;
  text-transform: camelcase;
  padding-right: 0.6rem;
  margin: 0;
}

.c9 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1.1rem 1.875rem;
  border-top: 1px solid #f1f5f5;
}

.c9 button:last-child {
  margin-left: 2rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  width: 555px;
  height: auto;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  overflow-y: auto;
  width: 100%;
  height: 100%;
  min-height: 100%;
  top: 0;
  z-index: 2;
  -webkit-transition: opacity 0.2s ease;
  transition: opacity 0.2s ease;
  -webkit-transition-delay: 0;
  transition-delay: 0;
  background-color: rgba(199,207,207,0.8);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  opacity: 1;
}

.c3 {
  height: 100vh;
  padding-top: 3rem;
  width: 100%;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 28rem;
  max-width: 100%;
  max-height: 98%;
  z-index: 1000;
  padding-bottom: 2rem;
  overflow-y: auto;
  background-color: #fff;
  margin-left: auto;
  margin-right: auto;
  border-radius: 16px;
}

.c8 {
  padding: 0rem 1.875rem 0rem 1.875rem;
}

@media (max-width:540px) {
  .c10 {
    padding: 0.9rem 1rem;
    width: 88%;
  }
}

@media (max-width:540px) {
  .c9 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (max-width:540px) {
  .c9 button:last-child {
    margin-left: 0;
  }
}

@media (max-width:540px) {
  .c3 {
    padding-top: 0rem;
  }
}

@media (max-width:540px) {
  .c4 {
    width: 88%;
    margin-top: 0.3125rem;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    open={true}
  >
    <div
      className="c2"
      id="lightbox-modal"
      onClick={[Function]}
      open={true}
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <h4
              className="c6"
              size="md"
            >
              Modal title
            </h4>
            <div
              className="c7"
              data-cy="icon_button"
              onClick={[Function]}
            >
              <svg
                height={19}
                viewBox="0 0 32 32"
                width={19}
              >
                <path
                  d="M16 12.8l-12.8-12.8-3.2 3.2 12.8 12.8-12.8 12.8 3.2 3.2 12.8-12.8 12.8 12.8 3.2-3.2-12.8-12.8 12.8-12.8-3.2-3.2-12.8 12.8z"
                  fill="#00B0CA"
                />
              </svg>
            </div>
          </div>
          <div
            className="c8"
          >
            <div>
              Content
            </div>
          </div>
          <div
            className="c9"
          >
            <button
              className="c10"
              color="primary"
              disabled={false}
              form="modal-submit"
              onClick={[Function]}
              size="md"
              type="submit"
            >
              <span
                className="c11"
                size="md"
              >
                OK
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c12"
  />
</div>
`;
